correction de position de barre de localisation et des filtres en version mobile

--- a/Booki-main/css/style.css
+++ b/Booki-main/css/style.css
@@ -746,6 +746,7 @@ footer{
     }
     form{
         height: 50px;
+        justify-content: center;
 
     }
 
@@ -761,8 +762,11 @@ footer{
 
     .box-filtre{
         height: 50px;
+        flex: 1 1 calc(5% - 10px);
+        display: flex;  
+        font-size: 9px;
     }
-    
+
     .filtre-logo{
         width: 50px;
         height: 50px;
